--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -14,3 +14,14 @@
         margin-top: 20px;
     }
 }
+
+.report {
+    &__files {
+        margin-top: 40px;
+        display: flex;
+    }
+}
+
+.file-list {
+    width: 100% !important;
+}
