front: добавить описание ошибки

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -25,3 +25,12 @@
 .file-list {
     width: 100% !important;
 }
+
+.file-errors {
+    &__description {
+        margin-top: 30px;
+        &:first-child {
+            margin-top: 0;
+        }
+    }
+}
